--- a/.env
+++ b/.env
@@ -14,13 +14,14 @@
 # ENVIRONMENT
 #--------------------------------------------------------------------
 
-# CI_ENVIRONMENT = production
+ CI_ENVIRONMENT = development
+ 
 
 #--------------------------------------------------------------------
 # APP
 #--------------------------------------------------------------------
 
-# app.baseURL = ''
+app.baseURL = 'http://localhost:8080/'
 # If you have trouble with `.`, you could also use `_`.
 # app_baseURL = ''
 # app.forceGlobalSecureRequests = false
@@ -30,13 +31,13 @@
 # DATABASE
 #--------------------------------------------------------------------
 
-# database.default.hostname = localhost
-# database.default.database = ci4
-# database.default.username = root
-# database.default.password = root
-# database.default.DBDriver = MySQLi
-# database.default.DBPrefix =
-# database.default.port = 3306
+ database.default.hostname = 'localhost'
+ database.default.database = 'TestAPIDB'
+ database.default.username = 'postgres'
+ database.default.password = 'X283FZ8Jga'
+ database.default.DBDriver = 'Postgre'
+ database.default.DBPrefix =
+ database.default.port = '5432'
 
 # database.tests.hostname = localhost
 # database.tests.database = ci4_test
